--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,9 @@ jobs:
           python-version: "3.12"
 
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libcairo2-dev
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libcairo2-dev gobject-introspection libgirepository1.0-dev
 
       - name: Install dependencies
         run: |
