--- a/.github/workflows/build-and-delivery.yml
+++ b/.github/workflows/build-and-delivery.yml
@@ -24,5 +24,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
           tags: ${{ vars.DOCKERHUB_USERNAME }}/my-app:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
