--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+fastapi
+uvicorn
+pydantic-settings
 attrs==23.2.0
 Automat==22.10.0
 Babel==2.10.3
@@ -53,4 +56,3 @@ wheel==0.42.0
 zope.interface==6.1
 fastapi==0.110.0
 httpx==0.27.0
-uvicorn
